--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.2",
+    "@types/reach__router": "^1.3.11",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
+    "react-router-loading": "^1.0.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.5.1",
+    "react-type-animation": "^2.1.2",
+    "sass": "^1.55.0",
+    "tsparticles": "^2.5.1",
+    "tsparticles-preset-links": "^2.5.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
