--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/reach__router": "^1.3.11",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
